adicionei as variáveis 26-09-2023

--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -180,20 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é maior que 5?\n",
     "6 > 5"
@@ -201,20 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é menor que 5?\n",
     "6 < 5"
@@ -222,20 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é maior ou igual que 5?\n",
     "6 >= 5"
@@ -243,20 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é menor ou igual que 5?\n",
     "6 <= 5"
@@ -264,20 +220,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é igual a 5?\n",
     "6 == 5"
@@ -285,20 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 6 é diferente de 5?\n",
     "6 != 5"
@@ -309,6 +243,90 @@
    "metadata": {},
    "source": [
     "**Observção: nos exemplos acima o código ira retorna verdadeiro(True) ou falso(False).** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variáveis\n",
+    "**Variáveis são um dos grandes pilares da programação em python. Ao invés dee trabalhar diretamente com os valores, atribuimos valores às variáveis e trabalhamos com elas, o que torna a programação mais flexível. Vejamos alguns exemplos de como isto funciona:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Para atribuirmos valores a uma variável, utiliza-se '=':\n",
+    "x = 2\n",
+    "y = 4\n",
+    "\n",
+    "# Print é uma função para exibir coisas na tela.\n",
+    "\n",
+    "print(\"Se realizarmos a seguinte operação x * y o resultado será:\", x * y)\n",
+    "print(\"Se realizarmos a seguinte operação x + y o resultado será:\", x + y)\n",
+    "print(\"Se realizarmos a seguinte operação y**x o resultado será:\", x**y)\n",
+    "\n",
+    "# Mude os valores de x e de Y e rode o código novamente para ver as alterações nos resultados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nomes das variáveis.\n",
+    "Um nome de uma variável podem ser somente com letras ou sequência de letras e números, mas, devem sempre começar com uma letra. Não podendo assim começar o nome com números ou caracteres especiais, com a execão do underline \"_\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Nomes válidos para variável:\n",
+    "num2 = 2\n",
+    "texto = \"Olá Mundo!\"\n",
+    "_teste_ = 10\n",
+    "\n",
+    "# Você pode dar o comando com a função print com o nome da variável entre parênteses para imprimir o seu valor\n",
+    "\n",
+    "print(num2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Nomes inválidos para variável:\n",
+    "2num = 2\n",
+    "@texto = \"Olá Mundo!\"\n",
+    " teste = 10\n",
+    "\n",
+    "# Você pode dar o comando com a função print com o nome da variável entre parênteses e nesse caso não ira imprimir o seu valor\n",
+    "\n",
+    "print( teste)\n",
+    "\n",
+    "# Ao digitar alguma dessas variáveis ira dar erro. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Lembre-se! Variáveis são muito úteis para seu código, então para facilitar seu trabalho, de a elas nomes que facilite a sua compreenção e a dos demais que possa vim a utilizar se código.**"
    ]
   },
   {
