Operações com strings 26/09/203

--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -282,17 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Nomes válidos para variável:\n",
     "num2 = 2\n",
@@ -327,6 +319,115 @@
    "metadata": {},
    "source": [
     "**Lembre-se! Variáveis são muito úteis para seu código, então para facilitar seu trabalho, de a elas nomes que facilite a sua compreenção e a dos demais que possa vim a utilizar se código.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operações com variáveis com o valor do tipo texto (string)\n",
+    "**As strings podem ser utilizadas como valores de variáveis em Python; elas são representadas por \" \" ou ' '. No entanto, é recomendável utilizar sempre aspas duplas(\" \")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definindo um valor do tipo string para uma variável\n",
+    "string = \"Bem vindos ao curso de Python do FEA.dev!\"\n",
+    "\n",
+    "# Executando o comando print com a variável string\n",
+    "print(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Podemos usar também uma segquência de três aspas duplas para escrever strings com quebra de linhas.\n",
+    "string2 = \"\"\"\n",
+    "Bem vindos ao curso de Pythin do FEA.dev!\n",
+    "Esta é a primeira aula\n",
+    "Aproveitem e aprendam muito!\n",
+    "\"\"\"\n",
+    "print(string2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tipos de operações com strings:\n",
+    "**Concatenamento de strings.\n",
+    "Em geral, podemos utilizar o operador aritmético de soma para concatenar(juntar) duas ou mais strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de concatenação\n",
+    "x =\"Hello \"\n",
+    "y = \"World\"\n",
+    "\n",
+    "print(x + y)\n",
+    "\n",
+    "# Troque os valores de x e de y entre aspas duplas para ver o resultado!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indexação e fatiamento de strings.\n",
+    "É possível escolher um caractere específico de uma string digitando o número referente a sua possição, o que é chamado de ínice. Lembrando que a contagem desta posição em python começa aparti do 0   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Escolhendo um caractere da string.\n",
+    "string = \"Bem vindos ao curso de Python do FEA.dev\"\n",
+    "string[7]\n",
+    "\n",
+    "# Mude este número entre colchetes para ver um resltado diferente!"
    ]
   },
   {
