--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -672,26 +672,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d'"
+       "'v'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Escolhendo um caractere da string.\n",
-    "string = \"Bem vindos ao curso de Python do FEA.dev\"\n",
+    "string = \"Bem vindos ao curso de Python do FEA.dev!\"\n",
     "string[7]\n",
     "\n",
     "# Mude este número entre colchetes para ver um resltado diferente!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'v'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Podemos também acessar de trás para frente, sendo o ultimo caractere -1\n",
+    "# Selecionando o penúltimo caractere\n",
+    "string[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'vindos'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Para seleciornar m grupo de caracteres, tilizamos dois pontos(:)\n",
+    "# Repare que o começo da seleção inclui o número que iniciara a contagem de caractere e vai até um caractere antes do selecionado.\n",
+    "# Ou seja, selecionando [4:10], obteremos do apartir do caractere 4 até o caractere 9.\n",
+    "string[4:10] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'curso de Python do FEA.dev'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Para selecionar de um carctere especifico até o uultimo caractere, basta sar o número referente ao desejado,\n",
+    "# E não especificar o último.\n",
+    "# Assim ele vai selecionar do número especificado até o final.\n",
+    "string[14:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Métodos de "
    ]
   },
   {
