--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -562,7 +562,7 @@
    "metadata": {},
    "source": [
     "## Operações com variáveis com o valor do tipo texto (string)\n",
-    "**As strings podem ser utilizadas como valores de variáveis em Python; elas são representadas por \" \" ou ' '. No entanto, é recomendável utilizar sempre aspas duplas(\" \")."
+    "**As strings podem ser utilizadas como valores de variáveis em Python; elas são representadas por \" \" ou ' '. No entanto, é recomendável utilizar sempre aspas duplas(\" \").**"
    ]
   },
   {
