--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Bem vindos ao curso de Pythin do FEA.dev!\n",
+      "Bem vindos ao curso de Python do FEA.dev!\n",
       "Esta é a primeira aula\n",
       "Aproveitem e aprendam muito!\n",
       "\n"
@@ -623,7 +623,7 @@
    "source": [
     "# Podemos usar também uma segquência de três aspas duplas para escrever strings com quebra de linhas.\n",
     "string2 = \"\"\"\n",
-    "Bem vindos ao curso de Pythin do FEA.dev!\n",
+    "Bem vindos ao curso de Python do FEA.dev!\n",
     "Esta é a primeira aula\n",
     "Aproveitem e aprendam muito!\n",
     "\"\"\"\n",
@@ -636,7 +636,7 @@
    "source": [
     "### Tipos de operações com strings:\n",
     "**Concatenamento de strings.\n",
-    "Em geral, podemos utilizar o operador aritmético de soma para concatenar(juntar) duas ou mais strings"
+    "Em geral, podemos utilizar o operador aritmético de soma para concatenar(juntar) duas ou mais strings**"
    ]
   },
   {
@@ -766,7 +766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos de "
+    "## Métodos de strings"
    ]
   },
   {
