Eu inseri os exemplos de métodos de strings 27-09-2023

--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -766,7 +766,174 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Métodos de strings"
+    "## Métodos de strings\n",
+    "As strings oferecem métodos que executam várias operações úteis. Métodos são comandos colocados ao final da string para realizar\n",
+    "determinadas ações de modificações.\n",
+    "Dentre os principais métodos aplicáveis a strings e suas funcionalidades podemos citar:\n",
+    "\n",
+    "1. **exemplo.upper():** que retorna o valor da variável com todas as letras maiúsculas.\n",
+    "1. **exemplo.lower():** retorna o valor da variável com todas as letras minúsclas.\n",
+    "1. **exemplo.strip():** retira os espaços em branco no cameço e no fim do valor da variável.\n",
+    "1. **exemplo.startswith('xyz'):** testa se o valor da variável começa com os elementos explicitados entre parênteses.\n",
+    "1. **exemplo.endswith('xyz'):** testa se a o valor da variável termina com os elementos explicitados entre parênteses.\n",
+    "1. **exemplo.find('xyz'):** procura a se o valor da variável tem os elementos explicitados entre parênteses, se sim, ele retornara o número do index referente onde se encontra o elemento, caso contrario retorna o valor -1.\n",
+    "1. **exemplo.replace('old' , 'new'):** traca o primeiro valor explicitado entre parênteses antes da vírgula, pelo o que está após.\n",
+    "---\n",
+    "Para mais exemplos de métodos de string [clique aqui](https://docs.python.org/pt-br/3/library/string.html).   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'EXEMPLO'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Upper:\n",
+    "exemplo = \"exemplo\"\n",
+    "exemplo.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'exemplo'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Lower\n",
+    "exemplo = \"EXemPLO\"\n",
+    "exemplo.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'exemplo'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Strip\n",
+    "exemplo = \"      exemplo             \"\n",
+    "exemplo.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Startswith\n",
+    "exemplo = \"exemplo\"\n",
+    "exemplo.startswith('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Endswith\n",
+    "exemplo = \"exemplo\"\n",
+    "exemplo.endswith('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Find\n",
+    "exemplo = \"exemplo\"\n",
+    "exemplo.find('x')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Programar é muito bom!'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Replace\n",
+    "exemplo2 = \"Programar é muito chato!\"\n",
+    "exemplo2.replace('chato', 'bom') "
    ]
   },
   {
