Adicionei exemplos de Input e Output 7-09-2023

--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -937,6 +937,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input e Output\n",
+    "**Veremos agora como armazenar informações externas no seu código!**\n",
+    "\n",
+    "Para armazenar informações utilizamos a função input(), e entre parênteses coolocamos uma pergnta em forma de string. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usando a função input() o valor que está contido dentro dele séra exibido como uma pergunta.\n",
+    "input(\"Como você está? \")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "E se tratando da função de output diferente da input ela serve para saída de dados, como por exemplo a função print "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parabéns por chegar até aqui!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Parabéns por chegar até aqui!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos também atribuir inputs as variáveis e usar a função print para exebir os dados que foram coletados pelo input."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idade = input(\"Qunatos anos você tem? \")\n",
+    "\n",
+    "# E podemos utilizar duas maneiras de colocar as variáveis junto às strings.\n",
+    "\n",
+    "print(\"Você possui \", idade, \"anos, que legal\")\n",
+    "print(f\"você possui {idade} anos, que legal\")\n",
+    "\n",
+    "# No segundo print para que ele funcione perfeitamente deve-se colocar um a letra f antes da string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## F-string\n",
+    "Colocando a letra f na frente das strings e antes das aspas, podemos adicionar junto às strings variaveis entre chaves { }.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tomei inccríveis 8 xícaras de CAFÉ!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# f-string\n",
+    "a = 4\n",
+    "b = 2\n",
+    "bebida = \"café\"\n",
+    "\n",
+    "f_string = f\"Tomei inccríveis {a * b} xícaras de {bebida.upper() + b * '!'}\"\n",
+    "\n",
+    "print(f_string)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
