--- a/primeiroPrograma.ipynb
+++ b/primeiroPrograma.ipynb
@@ -1040,7 +1040,7 @@
    "metadata": {},
    "source": [
     "# Chegamos ao fim desses exemplos.\n",
-    "**Esses exemplos foram confeccionados ao assistir  uma aula do curso  de python pelo instituto [FEA.dev](https://www.fearp.usp.br/oportunidades/item/11917-curso-de-python-fea-dev.html) na intenção de obter e repassar o aprendizado adquirido durante a aula** "
+    "**Esses exemplos foram confeccionados ao assistir  uma aula do curso  de python pelo instituto [FEA.dev](https://www.fearp.usp.br/oportunidades/item/11917-curso-de-python-fea-dev.html) na intenção de obter e repassar o aprendizado adquirido durante a aula.** "
    ]
   },
   {
